tests/ui-msrv/transmute-ref-src-not-nocell.stderr
error[E0277]: the trait bound `Src: NoCell` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-nocell.rs:22:32
   |
22 | const SRC_NOT_NO_CELL: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an implementor of trait `NoCell`
   |
note: required by `AssertSrcIsNoCell`
  --> tests/ui-msrv/transmute-ref-src-not-nocell.rs:22:32
   |
22 | const SRC_NOT_NO_CELL: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: NoCell` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-nocell.rs:22:32
   |
22 | const SRC_NOT_NO_CELL: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NoCell` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsNoCell`
  --> tests/ui-msrv/transmute-ref-src-not-nocell.rs:22:32
   |
22 | const SRC_NOT_NO_CELL: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsNoCell`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
